<resources>
    <string name="app_name">Jigsaw</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="Label">Jigsaw</string>

    <string name="date">Date</string>

    <string name="Log">Log</string>
    <string name="Data">Data</string>

    <string name="create">Create A New Plan</string>
    <string name="Name">Name:</string>
    <string name="noName">Name Cannot be empty</string>
    <string name="Remark">Remark:</string>
    <string name="noRemark">Remark Cannot be empty</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="t00">00</string>
    <string name="t03">03</string>
    <string name="t06">06</string>
    <string name="t09">09</string>
    <string name="t12">12</string>
    <string name="t15">15</string>
    <string name="t18">18</string>
    <string name="t21">21</string>
    <string name="t24">24</string>

    <string name="title_activity_jigsaw_fullscreen">JigsawFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
