<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smu_bme.jigsaw.MainActivity$PlaceholderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:text="@string/date"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/date"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <ImageButton
            android:id="@+id/edit_date"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_create_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ProgressBar
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="1440"
        android:progress="200"
        android:secondaryProgress="500"
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_gravity="start"
                android:text="@string/t00"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t03"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t06"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t09"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t12"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t15"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t18"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t21"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
            <TextView android:layout_weight="1" />
            <TextView
                android:text="@string/t24"
                android:layout_width="wrap_content"
                android:layout_height="15sp" />
        </TableRow>
    </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/event_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
</LinearLayout>
